bug: 67122 dividers in menu lists aren't visible
Created separate toolbar separator property and a css selector to override the toolbar dividers with it

http://bugzilla.zimbra.com/show_bug.cgi?id=67122

Copied from Perforce
 Change: 338561

--- a/WebRoot/skins/_base/base3/skin.css
+++ b/WebRoot/skins/_base/base3/skin.css
@@ -462,3 +462,5 @@ SELECT						{	@FieldBorder@	}
 .RowDouble .ImgCheckboxChecked,
 .RowDouble .ImgCheckboxUnchecked 	{ margin:5px 0 2px; 	}
 .RowDouble .BottomRow 			{ margin:2px 0 5px; 	}
+
+.ZToolbarTable .vertSep 	{ border-color:@ToolbarSeparatorColor@;     }
